fix(header.scss, home.scss)modified possition nav menu in version mobile, fixed cards size in top section on the home page

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -109,7 +109,7 @@
     
 
     &.active_menu {
-			bottom: 3rem;
+			bottom: 0;
 		}
 
     @include vieport-lg{
