--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -158,7 +158,7 @@
   position: relative;
   background-color: $second-bg;
   text-align: center;
-  padding: 1rem;
+  padding: 1.5rem;
   flex: 1 1 40%;
   color: white;
   @include vieport-lg{
